2003-12-15  Jody Goldberg <jody@gnome.org>

	* gnomecc.desktop.in : Use themed icon
	* capplet-dir.c (find_icon) : Support icon themes
	* capplet-dir-view-list.c (list_create) : make icons wider and less
	ugly.

2003-12-12  Jody Goldberg <jody@gnome.org>

	* gnomecc.desktop.in : Move to themeable icon

2003-10-28  Jody Goldberg <jody@gnome.org>

	* Release 2.5.0

2003-07-07  Jody Goldberg <jody@gnome.org>

	* Release 2.3.4

2003-06-24  Jody Goldberg <jody@gnome.org>

	* Release 2.3.3

2003-05-07  Jody Goldberg <jody@gnome.org>

	* Release 2.3.1

2003-04-29  Kjartan Maraas  <set EMAIL_ADDRESS environment variable>

	* capplet-dir.c: (read_entries): Plug a couple of leaks.

Tue Feb  4 17:09:18 2003  Jonathan Blandford  <jrb@redhat.com>

	* Release 2.2.0.1

Tue Jan 21 01:15:14 2003  Jonathan Blandford  <jrb@gnome.org>

	* Release 2.2.0

Thu Jan 16 02:41:09 2003  Jonathan Blandford  <jrb@gnome.org>

	* Release 2.1.7

2003-01-10  Jody Goldberg <jody@gnome.org>

	* Release 2.1.6

2002-12-18  Jody Goldberg <jody@gnome.org>

	* Release 2.1.5

2002-11-23  Jody Goldberg <jody@gnome.org>

	* Release 2.1.3

2002-11-08  Deepa Natarajan  <deepa.natarajan@wipro.com>

	* gnomecc-ui.xml: s/Contents.../Contents & s/About.../About
	Fixes bug# 96706.

2002-11-02  Jody Goldberg <jody@gnome.org>

	* Release 2.1.2

2002-10-21  Jody Goldberg <jody@gnome.org>

	* Release 2.1.1

2002-09-26  jacob berkman  <jacob@ximian.com>

	* Makefile.am (EXTRA_DIST): remove $appicon_data

2002-09-26  jacob berkman  <jacob@ximian.com>

	* capplet-dir.c (find_icon): fix the macro

	* capplet-dir-view.c (capplet_dir_view_init): use control-center2.png

	* Makefile.am: remove control-center.png which conflicts with the
	gnome 1 package and define different macros for $datadir/pixmaps
	and $gnomecc_icon_dir

2002-10-01  Jody Goldberg <jody@gnome.org>

	* Release 2.1.0.1

2002-08-21  Jody Goldberg <jody@gnome.org>

	* Release 2.1.0

2002-08-19  Ross Burton  <ross@burtonini.com>
